# poker-bot

./: .gitignore  CMakeLists.txt  README.md  data.py  main.py
aux_scripts/: chen_graph.py  main.py
data/: start_hands_pflop_vals.csv
include/: player.h  types.h
src/: main.cpp
